<resources>
    <string name="app_name">QuizApp</string>
    <string name="back">Back</string>
    <string name="contact_us_at">Contact us at:</string>
    <string name="zulnaar_gmail_com_nalex1997cristian_gmail_com_npaunstefan_gmail_com_nirinapandrea97_gmail_com_nandreimono_gmail_com">\n\nzulnaar@gmail.com\nalex1997cristian@gmail.com\npaunstefan@gmail.com\nirinapandrea97@gmail.com\nandreimono@gmail.com</string>
    <string name="_40722317630_n_40726912532">\n+40722317630\n+40726912532</string>
    <string name="quizapp">QuizApp</string>
    <string name="this_is_a_quiz_app_created_in_order_to_simulate_interactive_response_games_like_socrative_or_kahoot_n_nthe_main_goal_of_this_project_is_to_let_us_have_a_better_understanding_of_the_mobile_device_application_programming_in_general_n_nthe_project_s_creators_are_nmonoranu_andrei_nosiac_alexandru_npandrea_irina_npasat_stefan_npaun_stefan">This is a quiz app created in order to simulate interactive response games like Socrative or Kahoot.\n\nThe main goal of this project is to let us have a better understanding of the mobile device application programming in general.\n\nThe project\'s creators are:\nMonoranu Andrei\nOsiac Alexandru\nPandrea Irina\nPasat Stefan\nPaun Stefan</string>
    <string name="v0_01">v0.01</string>
    <string name="please_enter_your_login_data">Please enter your login data</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="teacher_login">Teacher login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="student_login">Student login</string>
    <string name="register">Register</string>
    <string name="christmas">Christmas</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="lemonade">*Go Green!*</string>
    <string name="the_questions_are">The examples are:</string>
    <string name="rate">Rate</string>
    <string name="please_rate_our_app">Please rate our app!</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email">Email</string>
    <string name="faculty">Department</string>
    <string name="account_type">Account type</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="please_select_your_account_type">Please select your account type</string>
    <string name="next">Next</string>
    <string name="student_page">Student Page</string>
    <string name="view_subjects">View Subjects</string>
    <string name="view_questions">View Example Questions</string>
    <string name="your_subjects_are">Your subjects are:</string>
    <string name="teacher_page">Teacher Page</string>
    <string name="go_back">Go Back</string>
    <string name="Choose">Choose your department!</string>
    <string name="viewTeacher">View account details!</string>
    <string name="account_details">Your account details are:</string>
    <string name="emaillll">Email</string>
    <string name="title_activity_student_details">StudentDetailsActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="deleteTeacher">Delete Account</string>
    <string name="logout_option">Log out</string>
    <string name="changePass">Change Password</string>
    <string name="insertOldPass">Insert your old password</string>
    <string name="insertNewPass">Insert your new password</string>
    <string name="donePass">Done</string>
    <string name="bttnCustBack">Back</string>
    <string name="regData">Enter registration data below</string>
    <string name="createQ">Please insert 5 questions and also specify  all of the answers including the correct one!</string>
    <string name="bttnAddQuiz">Add a quiz!</string>
    <string name="SelectQ">Please select a test!</string>
    <string name="takeQuiz">Take Quiz!</string>
    <string name="SubmitQuiz">Submit</string>
    <string name="view_grades">View Grades</string>
    <string name="chartGrades">Here is a chart of your grades!</string>
    <string name="saveGradesAsTxt">Save as TXT</string>
    <string name="wwusers">This app is used by %d users worldwide!</string>
</resources>
