<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSelectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="72dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/please_select_your_account_type"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        android:background="@drawable/buttonshape5"
        android:textColor="@android:color/white"
        android:fontFamily="@font/rubik_medium"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSelectBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        android:background="@drawable/buttonshape5"
        android:textColor="@android:color/white"
        android:fontFamily="@font/rubik_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rgSelect"
        android:layout_width="160dp"
        android:layout_height="144dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectTitle">

        <RadioButton
            android:id="@+id/rbSelectStudent"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="@font/rubik"
            android:text="@string/student"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="161dp" />

        <RadioButton
            android:id="@+id/rbSelectTeacher"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="@font/rubik"
            android:text="@string/teacher"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="207dp" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>